updating hero image=camisa-y-pant.jpg

--- a/dev/index.html
+++ b/dev/index.html
@@ -35,7 +35,7 @@
                 </section>
             
                   <aside>
-                    <img src="img/section-2/hero.png" alt="painted shirt and pant">
+                    <img src="img/section-2/camisa-y-pant.jpg" alt="painted shirt and pant">
                   </aside>
             
               </div>
