--- a/dev/index.html
+++ b/dev/index.html
@@ -16,7 +16,7 @@
 <body>
     <section id="section-1">
             <div id="section-1-content">
-                    <h1>PerrassPuntoCom</h1>
+                    <h1>PerrasPuntoCom</h1>
             </div>
     </section>
     <section id="section-2" class=".content-spacing">
